--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,30 +1,30 @@
 .header{
-    padding: 30px 0px;
-}
-
-.headerRow{
-    padding: 0px 70px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .navbar{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .link{
-    margin: 0px 30px 0px 0px;
+    font-family: 'Roboto', sans-serif;
+    margin: 0px 0px 0px 30px;
     color: #000;
     text-decoration: none;
     font-size: 18px;
+    cursor: pointer;
+
+    &:hover{
+        border-bottom: 1px solid #333333;
+    }
 }
 
 .mainLink{
     flex: 1 1 auto;
     font-size: 28px;
-}
-
-.activeHeaderLink{
-    text-decoration: underline;
 }
 
 a.active{
@@ -46,5 +46,10 @@ a.active{
     &__b{
         background-color: #333333;
         color: #FAFAFA;
+    }
+
+    &:hover{
+        background-color: #D6F164;
+        color: #333333;
     }
 }
